--- a/scoreboard-app/package.json
+++ b/scoreboard-app/package.json
@@ -3,16 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
     "@testing-library/dom": "^10.4.0",
     "@types/jest": "^27.5.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-router-dom": "^5.3.3",
+    "add": "^2.0.6",
     "bootstrap": "^5.3.3",
     "react": "^19.1.0",
-    "react-bootstrap": "^2.10.2",
+    "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.1.0",
-    "typescript": "^4.9.5"
+    "react-router-dom": "^7.6.3",
+    "react-signalr": "^0.2.24",
+    "socket.io-client": "^4.8.1",
+    "typescript": "^4.9.5",
+    "use-debounce": "^10.0.5"
   },
   "scripts": {
     "dev": "vite",
