--- a/scoreboard-app/package.json
+++ b/scoreboard-app/package.json
@@ -11,15 +11,17 @@
     "@types/react-router-dom": "^5.3.3",
     "add": "^2.0.6",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^12.23.12",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3",
+    "react-router-dom": "^7.9.1",
     "react-signalr": "^0.2.24",
     "socket.io-client": "^4.8.1",
     "typescript": "^4.9.5",
-    "use-debounce": "^10.0.5"
+    "use-debounce": "^10.0.5",
+    "zustand": "^5.0.8"
   },
   "scripts": {
     "dev": "vite",
@@ -49,5 +51,6 @@
     "@vitejs/plugin-react": "^4.6.0",
     "sass-embedded": "^1.89.2",
     "vite": "^7.0.4"
-  }
+  },
+  "packageManager": "yarn@4.9.0"
 }
