Refactor scoreboard-app and backend structure
- Removed the Install project from the solution file to streamline the project structure.
- Updated index.html files in both scoreboard-app and backend to include a new custom stylesheet.
- Deleted outdated JavaScript and CSS files from the dist directory to clean up build artifacts.
- Enhanced AdminPanel by adding new components for background images and borders toggle.
- Introduced new types for text configuration and background images in the backend models.
- Updated launch settings for backend to support multiple application URLs for development and production.

--- a/scoreboard-backend/Properties/launchSettings.json
+++ b/scoreboard-backend/Properties/launchSettings.json
@@ -1,20 +1,20 @@
 ﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "http": {
+    "http prod": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5035",
+      "applicationUrl": "http://localhost:5035;http://192.168.1.69:5035",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Production"
       }
     },
-    "http s": {
+    "http dev": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5035",
+      "applicationUrl": "http://localhost:5035;http://192.168.1.69:5035;http://10.147.18.34:5035",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
