feat: Обновить конфигурацию установки и добавить поддержку UI для Wix, изменить базовый URL для разработки

--- a/scoreboard-backend/appsettings.json
+++ b/scoreboard-backend/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5073"
+      }
+    }
+  },
+  "url": "http://localhost:5073",
+  "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
