Функция: добавлена ​​поддержка нескольких комментаторов в табло
- Обновлены типы данных для включения свойств комментаторов (имена, изображения, цвета).

- Реализованы методы бэкэнда для обновления информации о комментаторах.

- Улучшены модели ColorPreset и FontConfiguration для поддержки стилей комментаторов.

- Добавлены новые значения перечисления ImageType для изображений комментаторов.

- Созданы свойства LayoutConfig для позиционирования комментаторов.

- Изменен компонент ScoreboardState для включения состояний комментаторов.

- Обновлены ColorPresetService и DatabaseService для новых полей цвета комментаторов.

- Разработан компонент CommentatorsCard для панели администратора для управления данными комментаторов.

--- a/scoreboard-backend/appsettings.json
+++ b/scoreboard-backend/appsettings.json
@@ -2,11 +2,11 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://localhost:5073"
+        "Url": "http://*:5073"
       }
     }
   },
-  "url": "http://localhost:5073",
+  "url": "http://*:5073",
   "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
